finish the details page

--- a/main-page.html
+++ b/main-page.html
@@ -13,13 +13,13 @@
         <button aria-label="Open navigation menu" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer" id="mobile-menu-button">
             <i class="fa-solid fa-bars text-xl"></i>
         </button>
-    
+        <img src="images/logo.png" class="h-10">
         <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer" id="mobile-menu-button">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
 
-    <main class="flex flex-col min-h-screen w-full px-4 py-4">
+    <main class="flex flex-col m-4 py-4">
         <h1 class="items-center">Blogger of the week</h1>
         <div class="flex gap-1 my-2">    
             <div class="flex flex-col items-center gap-2 w-20">
@@ -66,9 +66,12 @@
             </div>
         </div>
         
+    <div class="flex flex-col gap-4  pb-2">
+        <!-- CARD 1 -->
+        <a href="details.html">
         <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
             <!-- Image -->
-            <img src="images/blog-2.jpg" alt="Yellow river" class="w-full h-48 object-cover"/>
+            <img src="images/yellow-river.jpg" alt="Yellow river" class="w-full h-48 object-cover"/>
             <!-- Content -->
             <div class="p-4">
                 <h2 class="font-bold text-lg">Yellow river</h2>
@@ -76,17 +79,113 @@
 
                     <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
                         <div class="flex items-center gap-1">
-                        📍 <span>China</span>
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>China</span>
                         </div>
                         <div class="flex items-center gap-1">
-                        ⏱ <span>15 min</span>
+                        <i class="fa-regular fa-clock"></i> <span>15 min</span>
                         </div>
                         <div class="flex items-center gap-1">
-                        👁 <span>12k</span>
+                        <i class="fa-regular fa-eye"></i> <span>12k</span>
                         </div>
                     </div>
             </div>
-        </div>
+        </div></a>
+        <!-- CARD 2 -->
+        <a href="details.html">
+        <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+            <!-- Image -->
+            <img src="images/national-park.png" alt="Yellow river" class="w-full h-48 object-cover"/>
+            <!-- Content -->
+            <div class="p-4">
+                <h2 class="font-bold text-lg">Banff National Park</h2>
+                <p class="text-sm text-gray-500">by Joe Rath</p>
+
+                    <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                        <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>Canada</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>12 min</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>30k</span>
+                        </div>
+                    </div>
+            </div>
+        </div></a> 
+        <!-- CARD 3 -->
+        <a href="details.html">
+        <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+            <!-- Image -->
+            <img src="images/santorini.png" alt="Yellow river" class="w-full h-48 object-cover"/>
+            <!-- Content -->
+            <div class="p-4">
+                <h2 class="font-bold text-lg">Santorini</h2>
+                <p class="text-sm text-gray-500">by Francis Sanford</p>
+
+                    <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                        <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>Greece</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>10 min</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>23k</span>
+                        </div>
+                    </div>
+            </div>
+        </div></a>
+        <!-- CARD 4 -->
+        <a href="details.html">
+        <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+            <!-- Image -->
+            <img src="images/sahara.jpg" alt="Yellow river" class="w-full h-48 object-cover"/>
+            <!-- Content -->
+            <div class="p-4">
+                <h2 class="font-bold text-lg">Moroccan Sahara</h2>
+                <p class="text-sm text-gray-500">by Bradley Stiedeman</p>
+
+                    <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                        <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>Morocco</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>15 min</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>50k</span>
+                        </div>
+                    </div>
+            </div>
+        </div></a>
+        <!-- CARD 5 -->
+        <a href="details.html">
+        <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+            <!-- Image -->
+            <img src="images/iceland-waterfalls.jpeg" alt="Yellow river" class="w-full h-48 object-cover"/>
+            <!-- Content -->
+            <div class="p-4">
+                <h2 class="font-bold text-lg">Iceland Watterfalls</h2>
+                <p class="text-sm text-gray-500">by Robert Cole</p>
+
+                    <div class="flex items-center gap-4 text-sm text-gray-500 mt-2">
+                        <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>Iceland</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>12 min</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>11k</span>
+                        </div>
+                    </div>
+            </div>
+        </div></a>
+    </div>
+
+
+
 
 
     </main>
