--- a/details.html
+++ b/details.html
@@ -9,8 +9,50 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header class="flex items-center justify-between px-4 md:px-8 py-3 bg-white border-b border-gray-200 sticky top-0">
+        <button aria-label="Open navigation menu" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer" id="mobile-menu-button">
+            <i class="fa-solid fa-bars text-xl"></i>
+        </button>
+        <img src="images/logo.png" class="h-10">
+        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer" id="mobile-menu-button">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+    </header>
+    <main class="flex flex-col h-[100vh]">
+        <div class="h-1/3 gap-4 bg-[url('images/yellow-river.jpg')] bg-cover  text-white">
+            <div class="flex flex-col h-full justify-end p-4">
+                <h2 class="font-bold text-lg">Yellow river</h2>
+                <div class="flex gap-2">
+                    <p class="text-sm">by Ian Jacobson</p>
+                        <div class="flex items-center gap-1">
+                        <i class="fa-solid fa-location-crosshairs"></i> <span>China</span>
+                        </div>
+                </div>
+                    <div class="flex items-center gap-4 text-sm mt-2 justify-between">
+                        <div class="flex items-center gap-1">
+                        <i class="fa-regular fa-clock"></i> <span>15 min</span>
+                        </div>
+                        <div class="flex items-end gap-1">
+                        <i class="fa-regular fa-eye"></i> <span>12k</span>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <div class="h-2/3 flex flex-col gap-4 items-center p-4">
+            <div class="flex gap-2 justify-evenly">
+                <h1>Lets begin to read</h1>
+                <h2>End</h2>
+            </div>
+            <p>The Yellow River, or "Huang He," is not just a river;
+                it's a living testament to China's rich history and 
+                cultural heritage. Spanning over 5,400 kilometers.
+                My journey along this iconic river offered a perfect 
+                blend of natural wonders, cultural experiences, and 
+                awe-inspiring moments.
+                From the serene alpine meadows at its source in 
+                Qinghai Province to the thunderous Hukou Waterfall ....</p>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
