--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
-    <main class="flex flex-col h-[100vh]">
+    <main class="h-screen flex flex-col sticky">
         <div class="h-1/3 gap-4 bg-[url('images/yellow-river.jpg')] bg-cover  text-white">
             <div class="flex flex-col h-full justify-end p-4">
                 <h2 class="font-bold text-lg">Yellow river</h2>
