--- a/main-page.html
+++ b/main-page.html
@@ -19,7 +19,7 @@
         </button>
     </header>
 
-    <main class="flex flex-col m-4 py-4">
+    <main class="flex flex-col m-4 py-4 md:items-center">
         <h1 class="items-center">Blogger of the week</h1>
         <div class="flex gap-1 my-2">    
             <div class="flex flex-col items-center gap-2 w-20">
@@ -161,7 +161,7 @@
         </div></a>
         <!-- CARD 5 -->
         <a href="details.html">
-        <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+        <div class="max-w-sm rounded-2xl overflow-hidden object-cover bg-white shadow-lg my-2">
             <!-- Image -->
             <img src="images/iceland-waterfalls.jpeg" alt="Yellow river" class="w-full h-48 object-cover"/>
             <!-- Content -->
@@ -183,12 +183,26 @@
             </div>
         </div></a>
     </div>
-
-
-
-
-
     </main>
-    <footer></footer>
+    <footer class="flex gap-6 h-16 px-4 justify-between items-center shadow-2xl bg-blue-400 rounded rounded-t-lg sticky bottom-0">
+            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-location-dot"></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-user"></i>
+    </footer>
 </body>
 </html>
+
+
+<div class="flex flex-col">
+    <img src="" alt="">
+    <div>
+        <h2></h2>
+        <p></p>
+        <div>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+    </div>
+</div>
