completed the bottom navbar

--- a/details.html
+++ b/details.html
@@ -53,6 +53,12 @@
                 Qinghai Province to the thunderous Hukou Waterfall ....</p>
         </div>
     </main>
-    <footer></footer>
+    <!-- NAVBAR -->
+    <div class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0">
+            <i class="fa-solid fa-house text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-location-dot text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-heart text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-user text-blue-950 text-2xl"></i>
+    </div>
 </body>
 </html>
