--- a/main-page.html
+++ b/main-page.html
@@ -184,25 +184,14 @@
         </div></a>
     </div>
     </main>
-    <footer class="flex gap-6 h-16 px-4 justify-between items-center shadow-2xl bg-blue-400 rounded rounded-t-lg sticky bottom-0">
-            <i class="fa-solid fa-house"></i>
-            <i class="fa-solid fa-location-dot"></i>
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-user"></i>
-    </footer>
+    <!-- NAVBAR -->
+    <div class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0">
+            <i class="fa-solid fa-house text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-location-dot text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-heart text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-user text-blue-950 text-2xl"></i>
+    </div>
 </body>
 </html>
 
 
-<div class="flex flex-col">
-    <img src="" alt="">
-    <div>
-        <h2></h2>
-        <p></p>
-        <div>
-            <p></p>
-            <p></p>
-            <p></p>
-        </div>
-    </div>
-</div>
