create upload button for main page

--- a/main-page.html
+++ b/main-page.html
@@ -19,7 +19,7 @@
         </button>
     </header>
 
-    <main class="flex flex-col m-4 py-4 md:items-center">
+    <main class="relative flex flex-col m-4 py-4 md:items-center">
         <h1 class="items-center">Blogger of the week</h1>
         <div class="flex gap-1 my-2">    
             <div class="flex flex-col items-center gap-2 w-20">
@@ -183,13 +183,17 @@
             </div>
         </div></a>
     </div>
+    <div class="fixed flex flex-col gap-1 items-center justify-center p-4 h-16 w-16 bg-[#20B08D] text-white bg-cover rounded-full bottom-20 right-2">
+        <i class="fa-solid fa-arrow-up-from-bracket"></i>
+        <h1 class="text-sm font-bold text-white">Upload</h1>
+    </div>
     </main>
     <!-- NAVBAR -->
     <div class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0">
-            <i class="fa-solid fa-house text-blue-950 text-2xl"></i>
-            <i class="fa-solid fa-location-dot text-blue-950 text-2xl"></i>
-            <i class="fa-solid fa-heart text-blue-950 text-2xl"></i>
-            <i class="fa-solid fa-user text-blue-950 text-2xl"></i>
+            <i class="fa-solid fa-house text-3xl"></i>
+            <i class="fa-solid fa-location-dot text-3xl"></i>
+            <i class="fa-solid fa-heart text-3xl"></i>
+            <i class="fa-solid fa-user text-3xl"></i>
     </div>
 </body>
 </html>
