--- a/main-page.html
+++ b/main-page.html
@@ -25,75 +25,99 @@
         </button>
     </header>
 
-    <main class="flex flex-col gap-4 md:flex-row md:justify-center">
+    <main class="flex flex-col m-4 py-4 md:flex-row md:justify-center">
         <div
-            class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-8 bg-gray-100 rounded-r-2xl fixed left-0">
-            <i class="fa-solid fa-house text-3xl"></i>
-            <i class="fa-solid fa-magnifying-glass text-3xl"></i>
-            <i class="fa-solid fa-location-dot text-3xl"></i>
-            <i class="fa-solid fa-heart text-3xl"></i>
-            <i class="fa-solid fa-user text-3xl"></i>
+            class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0">
+            <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-house text-3xl"></i>
+                <h1 class="font-bold">Home</h1>
+            </div>
+
+            <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-magnifying-glass text-3xl"></i>
+                <h1 class="font-bold">Search</h1>
+            </div>
+
+
+            <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-location-dot text-3xl"></i>
+                <h1 class="font-bold">Location</h1>
+            </div>
+
+            <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-heart text-3xl"></i>
+                <h1 class="font-bold">Notifications</h1>
+            </div>
+
+            <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-user text-3xl"></i>
+                <h1 class="font-bold">Profile</h1>
+            </div>
         </div>
-        <div class="flex flex-col md:w-4/6 items-center py-4">
-            <div class="flex flex-col gap-2 items-center">
-                <h1>Blogger of the week</h1>
-                <div class="flex gap-1 my-2 md:flex md:flex-col md:justify-center md:items-center md:p-2 md:fixed md:right-0 md:bg-gray-100 rounded-l-2xl">
-                    
-                    <div class="flex flex-col items-center gap-2 w-20">
+        <div class="flex flex-col md:w-4/6">
+            <div class="flex flex-col gap-4 md:justify-center md:fixed md:right-0 md:p-4 md:bg-gray-100 rounded-l-2xl">
+                <h1 class="items-center font-bold">Blogger of the week</h1>
+                <div class="flex gap-2 overflow-x-auto items-start md:flex md:flex-col md:items-center">
+
+                    <div class="flex flex-col items-center gap-2 w-20 shrink-0">
                         <div class="w-16 h-16 rounded-full bg-[url('images/blog-1.jpg')] bg-cover bg-center border">
                         </div>
-                        <span class="text-xs text-center leading-tight">Josefina Hudson</span>
+                        <span class="text-xs text-center leading-tight w-20 h-8">Josefina Hudson</span>
                     </div>
 
-                    <div class="flex flex-col items-center gap-2 w-20">
+                    <div class="flex flex-col items-center gap-2 w-20 shrink-0">
                         <div class="w-16 h-16 rounded-full bg-[url('images/blog-2.jpg')] bg-cover bg-center border">
                         </div>
-                        <span class="text-xs text-center leading-tight">Joe Rath</span>
+                        <span class="text-xs text-center leading-tight w-20 h-8">Joe Rath</span>
                     </div>
 
-                    <div class="flex flex-col items-center gap-2 w-20">
+                    <div class="flex flex-col items-center gap-2 w-20 shrink-0">
                         <div class="w-16 h-16 rounded-full bg-[url('images/blog-3.png')] bg-cover bg-center border">
                         </div>
-                        <span class="text-xs text-center leading-tight">Francis Sanford</span>
+                        <span class="text-xs text-center leading-tight w-20 h-8">Francis Sanford</span>
                     </div>
 
-                    <div class="flex flex-col items-center gap-2 w-20">
+                    <div class="flex flex-col items-center gap-2 w-20 shrink-0">
                         <div class="w-16 h-16 rounded-full bg-[url('images/blog-4.jpeg')] bg-cover bg-center border">
                         </div>
-                        <span class="text-xs text-center leading-tight">Bradley Stiedeman</span>
+                        <span class="text-xs text-center leading-tight w-20 h-8">Bradley Stiedeman</span>
                     </div>
 
-                    <div class="flex flex-col items-center gap-2 w-20">
+                    <div class="flex flex-col items-center gap-2 w-20 shrink-0">
                         <div class="w-16 h-16 rounded-full bg-[url('images/blog-5.jpg')] bg-cover bg-center border">
                         </div>
-                        <span class="text-xs text-center leading-tight">Robert Cole</span>
+                        <span class="text-xs text-center leading-tight w-20 h-8">Robert Cole</span>
                     </div>
                 </div>
             </div>
 
-            <h1 class="items-center font-bold">What do you want to read?</h1>
-            <div class="flex gap-2 my-2">
-                <div class="rounded-full bg-[#CCF3EA] inline-block p-2 hover:outline-1">
-                    <h3>All</h3>
-                </div>
-                <div class="rounded-full inline-block p-2 outline-1">
-                    <h3>Forest</h3>
-                </div>
-                <div class="rounded-full inline-block p-2 outline-1">
-                    <h3>Beach</h3>
-                </div>
-                <div class="rounded-full inline-block p-2 outline-1">
-                    <h3>River</h3>
-                </div>
-                <div class="rounded-full inline-block p-2 outline-1">
-                    <h3>Mountains</h3>
+            <div class="flex flex-col gap-2 md:items-center">
+                <h1 class="items-center font-bold">What do you want to read?</h1>
+                <div class="flex gap-2 my-2">
+                    <div class="rounded-full bg-[#CCF3EA] inline-block p-2 hover:outline-1">
+                        <h3>All</h3>
+                    </div>
+                    <div class="rounded-full inline-block p-2 outline-1">
+                        <h3>Forest</h3>
+                    </div>
+                    <div class="rounded-full inline-block p-2 outline-1">
+                        <h3>Beach</h3>
+                    </div>
+                    <div class="rounded-full inline-block p-2 outline-1">
+                        <h3>River</h3>
+                    </div>
+                    <div class="rounded-full inline-block p-2 outline-1">
+                        <h3>Mountains</h3>
+                    </div>
                 </div>
             </div>
 
-            <div class="flex flex-col gap-4 pb-2">
+
+            <div class="flex flex-col gap-4 pb-2 md:items-center">
                 <!-- CARD 1 -->
                 <a href="details.html">
-                    <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+                    <div
+                        class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
                         <!-- Image -->
                         <img src="images/yellow-river.jpg" alt="Yellow river" class="w-full h-48 object-cover" />
                         <!-- Content -->
@@ -117,7 +141,8 @@
                 </a>
                 <!-- CARD 2 -->
                 <a href="details.html">
-                    <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+                    <div
+                        class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
                         <!-- Image -->
                         <img src="images/national-park.png" alt="Yellow river" class="w-full h-48 object-cover" />
                         <!-- Content -->
@@ -141,7 +166,8 @@
                 </a>
                 <!-- CARD 3 -->
                 <a href="details.html">
-                    <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+                    <div
+                        class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
                         <!-- Image -->
                         <img src="images/santorini.png" alt="Yellow river" class="w-full h-48 object-cover" />
                         <!-- Content -->
@@ -165,7 +191,8 @@
                 </a>
                 <!-- CARD 4 -->
                 <a href="details.html">
-                    <div class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2">
+                    <div
+                        class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
                         <!-- Image -->
                         <img src="images/sahara.jpg" alt="Yellow river" class="w-full h-48 object-cover" />
                         <!-- Content -->
@@ -189,7 +216,7 @@
                 </a>
                 <!-- CARD 5 -->
                 <a href="details.html">
-                    <div class="max-w-sm rounded-2xl overflow-hidden object-cover bg-white shadow-lg my-2">
+                    <div class="max-w-sm rounded-2xl overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
                         <!-- Image -->
                         <img src="images/iceland-waterfalls.jpeg" alt="Yellow river" class="w-full h-48 object-cover" />
                         <!-- Content -->
@@ -213,7 +240,7 @@
                 </a>
             </div>
             <div
-                class="fixed flex flex-col gap-1 items-center justify-center p-4 h-16 w-16 bg-[#20B08D] text-white bg-cover rounded-full bottom-20 right-2">
+                class="fixed flex flex-col gap-1 items-center justify-center p-4 h-16 w-16 bg-[#20B08D] text-white bg-cover rounded-full bottom-20 right-2 md:hidden">
                 <i class="fa-solid fa-arrow-up-from-bracket"></i>
                 <h1 class="text-sm font-bold text-white">Upload</h1>
             </div>
