complete details page desktop version

--- a/details.html
+++ b/details.html
@@ -24,8 +24,8 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
-    <main class="h-screen flex flex-col md:m-4 md:py-4 md:flex-row md:justify-center">
-        <div class="hidden md:h-full md:flex flex-col md:w-1/6 justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0">
+    <main class="h-screen flex flex-col md:flex-row">
+        <div class="hidden md:w-1/6 md:h-full md:flex flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl">
             <div class="flex gap-2 items-center">
                 <i class="fa-solid fa-house text-3xl"></i>
                 <h1 class="font-bold">Home</h1>
@@ -52,9 +52,9 @@
                 <h1 class="font-bold">Profile</h1>
             </div>
         </div>
-        <div class="flex flex-col md:w-4/6">
-            <div class="h-1/2 gap-4 bg-[url('images/yellow-river.jpg')] bg-cover md:rounded-2xl text-white">
-                <div class="flex flex-col h-full justify-end p-4">
+        <div class="flex flex-col justify-center md:p-16 md:items-center md:w-5/6">
+            <div class="gap-4 bg-[url('images/yellow-river.jpg')] bg-cover w-full h-1/2 md:rounded-2xl text-white">
+                <div class="flex flex-col h-full w-full justify-end p-4">
                     <h2 class="font-bold text-lg">Yellow river</h2>
                     <div class="flex gap-2">
                         <p class="text-sm">by Ian Jacobson</p>
@@ -92,10 +92,10 @@
     <!-- NAVBAR -->
     <div
         class="flex gap-6 h-16 px-4 justify-between items-center shadow-[0_-6px_12px_rgba(0,0,0,0.15)]  rounded-xl bg-white sticky bottom-0 md:hidden">
-        <i class="fa-solid fa-house text-blue-950 text-2xl"></i>
-        <i class="fa-solid fa-location-dot text-blue-950 text-2xl"></i>
-        <i class="fa-solid fa-heart text-blue-950 text-2xl"></i>
-        <i class="fa-solid fa-user text-blue-950 text-2xl"></i>
+        <i class="fa-solid fa-house text-2xl"></i>
+        <i class="fa-solid fa-location-dot text-2xl"></i>
+        <i class="fa-solid fa-heart text-2xl"></i>
+        <i class="fa-solid fa-user text-2xl"></i>
     </div>
 </body>
 
