--- a/main-page.html
+++ b/main-page.html
@@ -27,7 +27,7 @@
 
     <main class="flex flex-col m-4 py-4 md:flex-row md:justify-center">
         <div
-            class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0">
+            class="hidden w-1/6 md:flex h-full flex-col justify-center px-4 gap-10 bg-gray-100 rounded-r-2xl fixed left-0 top-0">
             <div class="flex gap-2 items-center">
                 <i class="fa-solid fa-house text-3xl"></i>
                 <h1 class="font-bold">Home</h1>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="flex flex-col md:w-4/6">
-            <div class="flex flex-col gap-4 md:justify-center md:fixed md:right-0 md:p-4 md:bg-gray-100 rounded-l-2xl">
+            <div class="flex flex-col gap-4 md:justify-center md:h-full md:fixed md:right-0 md:top-0 md:p-4 md:bg-gray-100 rounded-l-2xl">
                 <h1 class="items-center font-bold">Blogger of the week</h1>
                 <div class="flex gap-2 overflow-x-auto items-start md:flex md:flex-col md:items-center">
 
