create profile page for mobile and desktop

--- a/details.html
+++ b/details.html
@@ -18,9 +18,8 @@
             id="mobile-menu-button">
             <i class="fa-solid fa-bars text-xl"></i>
         </button>
-        <img src="images/logo.png" class="h-10">
-        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden"
-            id="mobile-menu-button">
+        <img src="images/logo.png" alt="" class="h-10">
+        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
@@ -53,7 +52,7 @@
             </div>
         </div>
         <div class="flex flex-col justify-center md:p-16 md:items-center md:w-5/6">
-            <div class="gap-4 bg-[url('images/yellow-river.jpg')] bg-cover w-full h-1/2 md:rounded-2xl text-white">
+            <div class="gap-4 bg-[url('images/yellow-river.jpg')] bg-cover object-cover w-full h-full md:rounded-2xl text-white">
                 <div class="flex flex-col h-full w-full justify-end p-4">
                     <h2 class="font-bold text-lg">Yellow river</h2>
                     <div class="flex gap-2">
