--- a/main-page.html
+++ b/main-page.html
@@ -18,9 +18,8 @@
             id="mobile-menu-button">
             <i class="fa-solid fa-bars text-xl"></i>
         </button>
-        <img src="images/logo.png" class="h-10">
-        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden"
-            id="mobile-menu-button">
+        <img src="images/logo.png" alt="" class="h-10">
+        <button aria-label="Open search bar" class="p-2 hover:bg-gray-100 rounded-lg cursor-pointer md:hidden">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
     </header>
@@ -95,7 +94,7 @@
                 <h1 class="items-center font-bold">What do you want to read?</h1>
                 <div class="flex gap-2 my-2">
                     <div class="rounded-full bg-[#CCF3EA] inline-block p-2 hover:outline-1">
-                        <h3>All</h3>
+                        <h2>All</h2>
                     </div>
                     <div class="rounded-full inline-block p-2 outline-1">
                         <h3>Forest</h3>
@@ -240,14 +239,11 @@
                 </a>
             </div>
             <div
-                class="fixed flex flex-col gap-1 items-center justify-center p-4 h-16 w-16 bg-[#20B08D] text-white bg-cover rounded-full bottom-20 right-2 md:hidden">
+                class="fixed flex flex-col gap-1 items-center justify-center p-4 h-16 w-16 bg-emerald-700 text-white bg-cover rounded-full bottom-20 right-2 md:hidden">
                 <i class="fa-solid fa-arrow-up-from-bracket"></i>
                 <h1 class="text-sm font-bold text-white">Upload</h1>
             </div>
         </div>
-        <!-- <div class="hidden w-1/6 md:flex h-full flex-col items-center justify-center gap-4 bg-gray-100 rounded-l-2xl fixed right-0">
-
-        </div> -->
     </main>
     <!-- NAVBAR -->
     <div
