--- a/profile.html
+++ b/profile.html
@@ -41,11 +41,11 @@
                 <h1 class="font-bold">Profile</h1>
             </div>
         </div>
-        <div class="h-screen flex flex-col md:p-16 md:items-center md:w-5/6">
-            <div class="relative bg-[url(images/national-park.png)] bg-cover bg-center object-cover h-[35vh] md:h-[45vh] w-full md:rounded-2xl">
+        <div class="h-screen flex flex-col md:items-center md:p-16 md:w-5/6">
+            <div class="relative bg-[url(images/national-park.png)] object-cover w-full h-[35vh] md:h-[45vh] md:w-1/2 md:rounded-2xl">
                 <img src="images/profile.png" alt="" class="absolute left-0 bottom-0 w-32 h-32">
             </div>
-            <form class="flex flex-col gap-2 w-full justify-center mx-4">
+            <form class="flex flex-col gap-2 w-full mx-4">
                 <h1 class="font-bold text-">Edit Profile</h1>
                 <h2>Update your personal informations</h2>
                 <label for="fname">First name:</label>
