add the add card button

--- a/details.html
+++ b/details.html
@@ -96,6 +96,8 @@
         <a href=""><i class="fa-solid fa-heart text-3xl"></i></a>
         <a href="profile.html"><i class="fa-solid fa-user text-3xl"></i></a>
     </div>
+
+<script src="script.js"></script>
 </body>
 
 </html>
