--- a/profile.html
+++ b/profile.html
@@ -174,5 +174,5 @@
         <a href="profile.html"><i class="fa-solid fa-user text-3xl"></i></a>
     </div>
 </body>
-
+<script src="script.js"></script>
 </html>
