--- a/main-page.html
+++ b/main-page.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <button
-                    class="bg-emerald-700 text-white text-center font-bold py-3 px-16 rounded-lg mt-4 hover:bg-emerald-700 transition-colors">
+                    class="bg-emerald-700 text-white text-center font-bold py-3 px-16 rounded-lg mt-4 hover:bg-emerald-700 transition-colors cursor-pointer">
                     <i class="fa-solid fa-plus"></i> Add Card
                 </button>
                 
@@ -124,10 +124,10 @@
 
                 <!-- CARD 1 -->
                 <div
-                    class="max-w-sm rounded-2xl items-center overflow-hidden object-cover bg-white shadow-lg my-2 md:w-md">
+                    class="max-w-sm rounded-2xl items-center  object-cover bg-white shadow-lg my-2 md:w-md">
                     <!-- Image -->
                     <a href="">
-                        <img src="images/yellow-river.jpg" alt="Yellow river" class="w-full h-48 object-cover" />
+                        <img src="images/yellow-river.jpg" alt="Yellow river" class="w-full h-48 rounded-t-2xl object-cover" />
                         <!-- Content -->
                         <div class="p-4">
                             <h2 class="font-bold text-lg">Yellow river</h2>
@@ -146,7 +146,14 @@
                                 <i class="fa-regular fa-eye"></i> <span>12k</span>
                             </div>
                         </div>
-                            <button class="cursor-pointer"> ⋮ </button>
+                        <div class="relative">
+                            <button class="rounded-full size-5 cursor-pointer"> ⋮ </button>
+                                <div class="menu absolute right-0 bottom-full mb-2 md:bottom-auto md:top-full md:mt-2 md:mb-0 w-28 bg-white rounded-lg shadow-lg z-50">
+                                    <button class="block w-full text-left px-3 py-2 rounded-t-lg hover:bg-gray-100">Edit</button>
+                                    <button class="block w-full text-left px-3 py-2 rounded-b-lg hover:bg-gray-100 text-red-500">Delete</button>
+                                </div>
+                        </div>
+
                     </div>
 
                 </div>
@@ -160,6 +167,70 @@
             <h1 class="text-sm font-bold text-white">Upload</h1>
         </div>
         </div>
+
+
+
+
+        
+
+<!-- Modal toggle -->
+<button data-modal-target="crud-modal" data-modal-toggle="crud-modal" class="text-white bg-brand box-border border border-transparent hover:bg-brand-strong focus:ring-4 focus:ring-brand-medium shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none" type="button">
+  Toggle modal
+</button>
+
+<!-- Main modal -->
+<div id="crud-modal" tabindex="-1" aria-hidden="true" class="fixed inset-0 z-50 flex items-center justify-center bg-black/40">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-neutral-primary-soft border bg-gray-100 border-default rounded-base shadow-sm p-4 md:p-6">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between border-b border-default pb-4 md:pb-5">
+                <h3 class="text-lg font-medium text-heading">
+                    Create new product
+                </h3>
+                <button type="button" class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center" data-modal-hide="crud-modal">
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/></svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <form action="#">
+                <div class="grid gap-4 grid-cols-2 py-4 md:py-6">
+                    <div class="col-span-2">
+                        <label for="name" class="block mb-2.5 text-sm font-medium text-heading">Name</label>
+                        <input type="text" name="name" id="name" class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body" placeholder="Type product name" required="">
+                    </div>
+                    <div class="col-span-2 sm:col-span-1">
+                        <label for="price" class="block mb-2.5 text-sm font-medium text-heading">Price</label>
+                        <input type="number" name="price" id="price" class="bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full px-3 py-2.5 shadow-xs placeholder:text-body" placeholder="$2999" required="">
+                    </div>
+                    <div class="col-span-2 sm:col-span-1">
+                        <label for="category" class="block mb-2.5 text-sm font-medium text-heading">Category</label>
+                        <select id="category" class="block w-full px-3 py-2.5 bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand px-3 py-2.5 shadow-xs placeholder:text-body">
+                            <option selected="">Select category</option>
+                            <option value="TV">TV/Monitors</option>
+                            <option value="PC">PC</option>
+                            <option value="GA">Gaming/Console</option>
+                            <option value="PH">Phones</option>
+                        </select>
+                    </div>
+                    <div class="col-span-2">
+                        <label for="description" class="block mb-2.5 text-sm font-medium text-heading">Product Description</label>
+                        <textarea id="description" rows="4" class="block bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full p-3.5 shadow-xs placeholder:text-body" placeholder="Write product description here"></textarea>                    
+                    </div>
+                </div>
+                <div class="flex items-center justify-between border-t border-default pt-4 md:pt-6">
+                    <button type="submit" class="inline-flex items-center bg-emerald-700 text-white bg-brand hover:bg-brand-strong box-border border border-transparent focus:ring-4 focus:ring-brand-medium shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">
+                        <svg class="w-4 h-4 me-1.5 -ms-0.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/></svg>
+                        Add new card
+                    </button>
+                    <button data-modal-hide="crud-modal" type="button" class="text-body bg-neutral-secondary-medium box-border border border-default-medium hover:bg-neutral-tertiary-medium hover:text-heading focus:ring-4 focus:ring-neutral-tertiary shadow-xs font-medium leading-5 rounded-base text-sm px-4 py-2.5 focus:outline-none">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div> 
+
     </main>
     <!-- NAVBAR -->
     <div
